# AWS-Real-time-Social-Media-Trend-Analysis

./: .gitignore  init.sh.tpl  main.py  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
modules/iam/: ec2_role.tf  main.tf  outputs.tf
modules/msk/: main.tf  outputs.tf  variables.tf
modules/networking/: main.tf  outputs.tf  variables.tf
modules/redshift/: main.tf  variables.tf
modules/s3/: mian.tf  variables.tf
scripts/: test_consumer.py
